Atualizar rotas de roles